src/objects/Account_Accounting__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Accountings</relationshipLabel>
        <relationshipName>Account_Accountings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gl_account_amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gl_account_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gl_account_id_path_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gl_account_istotal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is Total</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gl_account_path_position_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gl_account_per__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gl_account_type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BG</fullName>
                    <label>Balance General</label>
                </value>
                <value>
                    <fullName>GP</fullName>
                    <label>Ganancias y Perdidas</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parent_gl_account_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Estado Financiero</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>gl_account_amount__c</columns>
        <columns>gl_account_per__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estados Financieros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>